PodCoverage tests seems to complain about missing Moo

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ copyright_year   = 2016
 [@Filter]
 -bundle = @ZURBORG
 -remove = PruneFiles
+-remove = PodCoverageTests
 
 [Git::Check]
 allow_dirty = dist.ini
