--- a/dist.ini
+++ b/dist.ini
@@ -15,5 +15,5 @@ copyright_year   = 2016
 allow_dirty = dist.ini
 
 [TravisYML]
-perl_version = 5.10 5.12 5.14 5.16 5.18 5.20 5.22
+perl_version = 5.14 5.16 5.18 5.20 5.22
 
